grafana/grafana-grafana.svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["51.77.136.161"],"port":31431,"protocol":"TCP","serviceName":"grafana:grafana-grafana","allNodes":true}]'
  labels:
    app: grafana
    chart: grafana-0.0.31
    heritage: Tiller
    io.cattle.field/appId: grafana
    release: grafana
  name: grafana-grafana
  namespace: grafana
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 31431
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
  sessionAffinity: None
  type: NodePort
