grafana/grafana.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["51.77.136.161"],"port":80,"protocol":"HTTP","serviceName":"grafana:grafana-grafana","ingressName":"grafana:grafana","hostname":"grafana.grafana.51.77.136.161.xip.io","allNodes":true}]'
  labels:
    app: grafana
    chart: grafana-0.0.31
    heritage: Tiller
    io.cattle.field/appId: grafana
    release: grafana
  name: grafana
  namespace: grafana
spec:
  rules:
  - host: grafana.grafana.51.77.136.161.xip.io
    http:
      paths:
      - backend:
          serviceName: grafana-grafana
          servicePort: 80
